# transneft-ai-consultant

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.json  doc_id_mapping.json  evaluation_results.json  final_metrics.json  negative_samples.json
docs/: API.md  BENCHMARK.md  DEPLOYMENT.md  INSTALLATION.md
scripts/: annotate_relevant_docs.py  check_installation.py  create_benchmark.py  download_models.py  extract_doc_ids.py  prepare_data.py  run_evaluation.py
src/transneft_ai_consultant/backend/: api.py  api_voice.py  config.py  fix_encoding.py
src/transneft_ai_consultant/backend/data/: PAO Transneft reestr.docx
src/transneft_ai_consultant/backend/data_processing/: chunk_text.py  parse_docx.py  populate_vector_store.py
src/transneft_ai_consultant/backend/evaluation/: metrics.py  metrics_advanced.py  metrics_ranking.py  rouge_ru.py
src/transneft_ai_consultant/backend/models/: saiga_mistral_7b.Q4_K_M.py
src/transneft_ai_consultant/backend/rag/: embedder.py  hybrid_search.py  llm.py  pipeline.py  prompts.py  question_filter.py  rag_utils.py  vector_store.py
src/transneft_ai_consultant/backend/stt_tts/: __init__.py  speech_to_text.py  text_to_speech.py
src/transneft_ai_consultant/frontend/: index.html
src/transneft_ai_consultant/frontend/css/: animations.css  main.css
src/transneft_ai_consultant/frontend/js/: animation-sync.js  avatar.js  chat.js  main.js  voice.js
